Updated directive with attrs

--- a/ng-host/src/app/app.component.html
+++ b/ng-host/src/app/app.component.html
@@ -1,3 +1,10 @@
-<text-box label="First Name" type="text"></text-box>
-<text-box label="Last Name" type="text"></text-box>
-<text-box label="Email" type="number"></text-box>
+<text-box label="User Name" type="text"></text-box>
+<text-box label="Password" type="Password"></text-box>
+<text-box
+  label="Re-Password"
+  type="Password"
+  info="Both should be same"
+></text-box>
+<text-box label="Email" type="email"></text-box>
+<text-box label="Phone" type="number"></text-box>
+<text-box label="Date of birth" type="date"></text-box>
