navbar initial setup

--- a/ng-host/src/app/app.component.html
+++ b/ng-host/src/app/app.component.html
@@ -1,10 +1,9 @@
-<text-box label="User Name" type="text"></text-box>
-<text-box label="Password" type="Password"></text-box>
-<text-box
-  label="Re-Password"
-  type="Password"
-  info="Both should be same"
-></text-box>
-<text-box label="Email" type="email"></text-box>
-<text-box label="Phone" type="number"></text-box>
-<text-box label="Date of birth" type="date"></text-box>
+<nav-bar title="SGBuddies" logo="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-website-tools-design-website-name-logo-posters-and-25.png" items='["Home", "About","Contact Us","Profile"]'></nav-bar>
+<div class="container">
+  <text-box label="User Name" type="text"></text-box>
+  <text-box label="Password" type="Password"></text-box>
+  <text-box label="Re-Password" type="Password" info="Both should be same"></text-box>
+  <text-box label="Email" type="email"></text-box>
+  <text-box label="Phone" type="number"></text-box>
+  <text-box label="Date of birth" type="date"></text-box>
+</div>
