--- a/ng-host/src/app/app.component.css
+++ b/ng-host/src/app/app.component.css
@@ -1,8 +1,5 @@
-:host {
-  display: flex;
-  flex-direction: row;
-  gap: 1em;
-  flex-wrap: wrap;
-  width: 20%;
-  margin: auto;
+.container{
+  max-width: 30%;
+  display: block;
+  margin: 0 auto;
 }
